@@ -1,13 +1,15 @@
 package com.puresol.purifinity.client.application.commands;
 
 import java.awt.Desktop;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
+import org.eclipse.ui.PartInitException;
+import org.eclipse.ui.PlatformUI;
+import org.eclipse.ui.browser.IWebBrowser;
 
 public class OpenBugAndEnhancementTrackerWebsiteHandler extends AbstractHandler {
 
@@ -16,8 +18,10 @@ public class OpenBugAndEnhancementTrackerWebsiteHandler extends AbstractHandler 
 	@Override
 	public Object execute(ExecutionEvent event) throws ExecutionException {
 		try {
-			Desktop.getDesktop().browse(new URI(URL));
-		} catch (IOException | URISyntaxException e) {
+			IWebBrowser externalBrowser = PlatformUI.getWorkbench()
+					.getBrowserSupport().getExternalBrowser();
+			externalBrowser.openURL(new URL(URL));
+		} catch (PartInitException | MalformedURLException e) {
 			throw new IllegalStateException(
 					"Could not open URL '" + URL + "'.", e);
 		}
